--- a/FindersKeepers/app/src/main/res/values/strings.xml
+++ b/FindersKeepers/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="user_tags_text">Your Tags</string>
     <string name="title_activity_sign_in">SignInActivity</string>
     <string name="sign_in_text">Sign In</string>
+    <string name="title_activity_user_settings">UserSettingsActivity</string>
 </resources>
