--- a/FindersKeepers/app/src/main/res/values/strings.xml
+++ b/FindersKeepers/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="user_name">username</string>
     <string name="user_items_text">Your Items</string>
     <string name="user_tags_text">Your Tags</string>
+    <string name="user_wishlist_text">Your Wishlist</string>
     <string name="title_activity_sign_in">SignInActivity</string>
     <string name="sign_in_text">Sign In</string>
     <string name="title_activity_user_settings">UserSettingsActivity</string>
