Several new activities and layouts, basic internal function framework for adding items -- no functionality yet, but comments saying what certain parts should be doing.

--- a/FindersKeepers/app/src/main/res/values/strings.xml
+++ b/FindersKeepers/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="title_activity_user_settings">UserSettingsActivity</string>
     <string name="enter_zip_text">Enter ZIP Code</string>
     <string name="set_zip_button_text">Set ZIP Code</string>
+    <string name="tag_add">Add Tags</string>
+    <string name="new_tag">New Tag</string>
 </resources>
