--- a/FindersKeepers/app/src/main/res/values/strings.xml
+++ b/FindersKeepers/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="item_add_tags_hint">Tags Separated By Spaces</string>
     <string name="change_avatar_text">Change Avatar</string>
     <string name="update_button_text">Update Avatar and ZIP</string>
+    <string name="title_activity_view_item">ViewItemActivity</string>
+    <string name="delete_item_text">Delete Item</string>
 </resources>
