--- a/FindersKeepers/app/src/main/res/values/strings.xml
+++ b/FindersKeepers/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="user_items_text">Your Items</string>
     <string name="user_tags_text">Your Tags</string>
     <string name="user_wishlist_text">Your Wishlist</string>
-    <string name="title_activity_sign_in">SignInActivity</string>
+    <string name="title_activity_sign_in">Finders Keepers</string>
     <string name="sign_in_text">Sign In</string>
     <string name="title_activity_user_settings">UserSettingsActivity</string>
     <string name="enter_zip_text">Enter ZIP Code</string>
